@@ -1,5 +1,11 @@
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* Makefile.gdb: Remove file.
+	* Makefile.in: Remove GDB auxiliary rule to create GDB scripts for
+	each test.
+
+2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* ieee754r/islessgreaterd32.c (islessgreater): clean ups implementation
 	to use only libdecnumber operations.
 	* ieee754r/isgreaterd32.c (isgreater): Likewise.
